// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component Accepts custom styles 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="test-class"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Select component Accepts option children 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="test-class"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
      <option
        value=""
      >
        -
      </option>
      <option
        value="Dr."
      >
        Dr.
      </option>
      <option
        value="Prof."
      >
        Prof.
      </option>
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Select component Invalid initialValues render as defaultValue 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="test-class"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
      <option
        value=""
      >
        -
      </option>
      <option
        value="Dr."
      >
        Dr.
      </option>
      <option
        value="Prof."
      >
        Prof.
      </option>
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Select component Invalid initialValues render as defaultValue 2`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="test-class"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
      <option
        value=""
      >
        -
      </option>
      <option
        value="Dr."
      >
        Dr.
      </option>
      <option
        value="Prof."
      >
        Prof.
      </option>
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Select component Matches snapshot 1`] = `
<div
  className="pretty-row"
>
  <select
    className="form--pretty-select"
    defaultValue="unselected"
    multiple={false}
    name="email"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    required={false}
    size={1}
  >
    <option
      disabled={true}
      hidden={true}
      value="unselected"
    />
  </select>
  ;
  <div
    className="pretty-validation"
    data-validity={true}
  >
    Please enter a valid email address
  </div>
</div>
`;

exports[`Select component Renders required field 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="form--pretty-select"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    Please fill in this required field
  </div>
</div>
`;

exports[`Select component Renders required props 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="form--pretty-select"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={false}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;

exports[`Select component Renders without a validation message 1`] = `
<div
  className="pretty-row"
>
  <label
    className="pretty-label"
    data-active={true}
    data-validity={true}
    htmlFor="test"
  >
    <span
      className="pretty-label-text"
      data-active={true}
    >
      This is a test field
    </span>
    <select
      className="form--pretty-select"
      defaultValue="unselected"
      multiple={false}
      name="test"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      required={true}
      size={1}
    >
      <option
        disabled={true}
        hidden={true}
        value="unselected"
      />
    </select>
  </label>
  <div
    className="pretty-validation"
    data-validity={true}
  >
    
  </div>
</div>
`;
